app/_scss/templates/_about.scss
#about {
  padding-top: 76px;

  .margin-bottom {
    margin-bottom: 30px;

    &.double {
      margin-bottom: 60px;
    }
  }
}

.fixie-text {
  z-index: 9;
}

.authors {
  padding-top: 29px;
  font-size: 22px;

  dt {
    display: inline-block;
    vertical-align: top;
    width: 25%;
    margin-bottom: 30px;
    font-family: 'Dia';
    font-weight: 700;
  }

  dd {
    display: inline-block;
    vertical-align: top;
    width: 70%;
    margin-top: 3px;
    margin-bottom: 20px;
    font-family: 'Plantin';
  }

  @media (max-width: 480px) {
    dd, dt {
      width: 100%;
    }
  }

}

.map-container {
  position: relative;
  width: 100%;
  background: #f4f2ec;

  img {
    width: 100%; 
    z-index: 1;
  }

  .place {
    display: none;
    position: absolute;
    top: 36%;
    width: 100%;
    left: 0;
    transform: translate(0,-50%);
    text-align: center;
    z-index: 1;

    h1 {
      font: 700 100px "Plantin";
      margin: 0;
      line-height: 1;
    }

    p {
      font: 400 30px "Dia";
    }
  }

  .marker {
    @include sprites-general("marker");

    position: absolute;
    text-decoration: none;
    color: #FFF;
    line-height: 2;
    font: 400 15px "Dia";
    font-size: 15px;
    z-index: 2;
    text-indent: 0;
    text-align: center;
    padding-top: 6px;

    &:hover {
      @include sprites-general("marker-hover");
     
      color: #000;
      font: 400 15px "Dia";
      font-size: 15px;
      padding-top: 6px;
      text-indent: 0;

      // &:hover:after {
      //   content: '\00a0\00a0';
      //   border-color: #FFF transparent transparent transparent;
      // }

      &:hover + .place {
        display: block;
      }
    }
  }
}

